--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERGO4ONE - Costruire un Mondo Decentralizzato | MillionErg</title>
-    <meta name="description" content="ERGO4ONE è una DAO che promuove un mondo decentralizzato attraverso l'uso della tecnologia blockchain. Unisciti a noi per un'economia equa, trasparente, incensurabile e instoppabile.">
+    <meta name="description" content="ERGO4ONE è una DAO che promuove un mondo decentralizzato attraverso l'uso della tecnologia blockchain. Unisciti a noi per un'economia equa e trasparente.">
     <link rel="stylesheet" href="styles.css"> <!-- Collega il CSS principale -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- Structured Data for SEO -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -32,31 +31,27 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            min-height: 100vh; /* Rende il footer sempre in fondo alla pagina */
-            transition: background-color 0.5s ease; /* Transizione per il cambiamento del colore di sfondo */
+            min-height: 100vh;
         }
         header {
             background-color: #333;
             color: white;
             padding: 10px 0;
-            position: relative; /* Posizionamento relativo per la gestione del menu */
+            position: relative;
         }
         .container {
             max-width: 1200px;
             margin: auto;
             padding: 0 15px;
-            flex: 1; /* Permette al contenuto di espandersi */
+            flex: 1;
         }
         .logo-container img {
             width: 100px;
-            border-radius: 50%; /* Cornice circolare */
-            border: 2px solid orange; /* Bordo arancione sottile */
         }
         h1 {
             display: inline-block;
             margin-left: 15px;
             vertical-align: middle;
-            color: #ffffff;
         }
         nav ul {
             list-style-type: none;
@@ -76,7 +71,7 @@
             text-decoration: underline;
         }
         #hero {
-            background-color: #007bff;
+            background-color: #3399ff;
             color: white;
             padding: 50px 0;
             text-align: center;
@@ -88,14 +83,13 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 20px;
-            margin-top: 20px;
         }
         .benefit-item {
             background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 5px;
             padding: 20px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
         }
         .btn {
             background-color: #0056b3;
@@ -104,9 +98,12 @@
             border: none;
             border-radius: 5px;
             text-decoration: none;
+            display: inline-block;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
         }
         .btn:hover {
-            background-color: #004a99;
+            background-color: #003f7d;
         }
         footer {
             margin-top: 50px;
@@ -122,15 +119,8 @@
         .expandable-container.expanded {
             display: block;
         }
-        /* Stili per centrare il contenuto delle sezioni Dona e Contatta */
-        #donate, #contact {
-            text-align: center;
-        }
-        #contact form {
-            max-width: 600px;
-            margin: 0 auto; /* Centra il modulo nella pagina */
-        }
-        /* Stili per il menu hamburger */
+
+        /* Hamburger menu for mobile */
         .hamburger {
             display: none;
             flex-direction: column;
@@ -146,7 +136,8 @@
             background-color: white;
             transition: 0.3s;
         }
-        /* Stili per il menu mobile */
+
+        /* Mobile menu */
         .menu-overlay {
             display: none;
             position: fixed;
@@ -170,6 +161,7 @@
         .menu-overlay.show {
             display: flex;
         }
+
         @media (max-width: 768px) {
             nav ul {
                 display: none;
@@ -187,7 +179,7 @@
                 margin-right: 15px;
             }
             .benefits-grid {
-                grid-template-columns: 1fr; /* Una colonna singola su dispositivi più piccoli */
+                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -198,7 +190,7 @@
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo-container">
                 <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
-                    <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
+                    <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo di ERGO4ONE - Piattaforma Decentralizzata" class="logo">
                 </a>
             </div>
             <h1>MillionErg</h1>
@@ -234,7 +226,7 @@
     <section id="hero">
         <div class="container">
             <h1>Costruire un Mondo Decentralizzato con MillionErg</h1>
-            <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain. Unisciti a noi per creare un futuro dove la partecipazione è libera, incensurabile e alla portata di tutti.</p>
+            <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
             <a href="https://t.me/millionerg24" class="btn" target="_blank" rel="noopener noreferrer">Unisciti al Movimento</a>
         </div>
     </section>
@@ -243,9 +235,7 @@
     <section id="about">
         <div class="container">
             <h2>Cosa è ERGO4ONE</h2>
-            <p>ERGO4ONE è una DAO che permette alle comunità di utilizzare equamente le risorse e di ridistribuire i crediti automaticamente. Grazie alla tecnologia blockchain, ERGO4ONE favorisce trasparenza, sicurezza, privacy e incensurabilità, garantendo che tutte le attività siano libere da interferenze o censure esterne.</p>
-            <h2>Cosa è MillionErg</h2>
-            <p>MillionErg è un'iniziativa di crowdfunding basata su Ergo, che mira a costruire un'economia più equa, instoppabile e decentralizzata. Ogni contributo viene registrato in maniera trasparente, permettendo un accesso equo a tutti e senza possibilità di bloccare o censurare le attività di chi partecipa.</p>
+            <p>ERGO4ONE è una DAO che permette alle comunità di prosperare attraverso un'economia decentralizzata e trasparente. Utilizziamo la blockchain per garantire che ogni contributo venga riconosciuto e ricompensato equamente.</p>
         </div>
     </section>
 
@@ -255,24 +245,20 @@
             <h2>I Nostri Vantaggi Chiave</h2>
             <div class="benefits-grid">
                 <div class="benefit-item">
-                    <h3>Governance Decentralizzata</h3>
-                    <p>Tutte le decisioni vengono prese dai membri della comunità, in maniera equa e trasparente, garantendo che ogni voce abbia un peso reale. La decentralizzazione assicura che nessuna singola entità possa prendere il controllo o censurare la piattaforma.</p>
+                    <h3>Decentralizzazione</h3>
+                    <p>Riduciamo il potere centralizzato per permettere una governance più equa.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Privacy e Sicurezza</h3>
-                    <p>La privacy degli utenti è una priorità assoluta. Utilizziamo crittografia avanzata e registrazioni sulla blockchain per garantire che tutte le transazioni siano sicure, anonime e immutabili. Nessun dato sensibile può essere compromesso o manipolato.</p>
+                    <h3>Trasparenza</h3>
+                    <p>Tutte le transazioni sono registrate sulla blockchain e visibili a tutti.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Pari Opportunità</h3>
-                    <p>Crediamo in un mondo in cui le risorse devono essere accessibili a tutti, indipendentemente da dove vivono o chi siano. La nostra piattaforma consente una distribuzione bilanciata e equa delle risorse, riducendo le barriere e promuovendo un accesso equo per tutti.</p>
+                    <h3>Equità</h3>
+                    <p>Ogni partecipante ha voce in capitolo e un'opportunità di guadagno.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Costi di Transazione Ridotti</h3>
-                    <p>Grazie alla tecnologia blockchain, riusciamo a mantenere i costi di transazione al minimo. Questo garantisce che la maggior parte dei fondi raccolti vada direttamente agli scopi prefissati, piuttosto che alle spese di intermediari o commissioni elevate.</p>
-                </div>
-                <div class="benefit-item">
-                    <h3>Incensurabilità e Instoppabilità</h3>
-                    <p>La piattaforma è progettata per essere incensurabile e instoppabile. Nessuna autorità centrale può intervenire per bloccare transazioni o limitare l'accesso, garantendo così una totale libertà di partecipazione e resistenza alla censura.</p>
+                    <h3>Comunità</h3>
+                    <p>Costruiamo reti solide e relazioni di fiducia tra membri.</p>
                 </div>
             </div>
         </div>
@@ -280,32 +266,18 @@
 
     <!-- Sezione Dona -->
     <section id="donate">
-        <div class="container text-center">
-            <h2>Sostieni la Nostra Missione</h2>
-            <p>Aiuta a costruire un'economia decentralizzata ed equa donando token Ergo (ERG). Ogni contributo potenzia individui, piccole imprese e iniziative sociali, assicurando che ogni membro della comunità abbia un'opportunità reale di prosperare in un ambiente libero e aperto.</p>
-            <a href="donate.html" class="btn">Dona ERG Ora</a>
+        <div class="container">
+            <h2>Supporta il Nostro Progetto</h2>
+            <p>Le donazioni aiutano a far crescere la nostra comunità e a sostenere iniziative decentralizzate. Ogni contributo è fondamentale!</p>
+            <a href="donate.html" class="btn">Dona Ora</a>
         </div>
     </section>
 
     <!-- Sezione Contatti -->
     <section id="contact">
-        <div class="container text-center">
-            <h2>Contatta ERGO4ONE</h2>
-            <button id="expand-contact-btn" class="btn">Mostra il modulo di contatto</button>
-            <div id="contact-form-container" class="expandable-container">
-                <form action="#" method="post">
-                    <label for="name">Il Tuo Nome:</label>
-                    <input type="text" id="name" name="name" required>
-
-                    <label for="email">La Tua Email:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <label for="message">Il Tuo Messaggio:</label>
-                    <textarea id="message" name="message" required></textarea>
-
-                    <button type="submit" class="btn">Invia Messaggio</button>
-                </form>
-            </div>
+        <div class="container">
+            <h2>Contattaci</h2>
+            <p>Hai domande o desideri sapere di più? <a href="mailto:info@yourwebsite.com">Contattaci via email</a>!</p>
         </div>
     </section>
 
@@ -317,26 +289,18 @@
     </footer>
 
     <script>
-        const expandBtn = document.getElementById('expand-contact-btn');
-        const contactContainer = document.getElementById('contact-form-container');
-        const hamburger = document.getElementById('hamburger');
-        const menuOverlay = document.getElementById('menu-overlay');
+        const hamburger = document.getElementById("hamburger");
+        const menuOverlay = document.getElementById("menu-overlay");
 
-        expandBtn.addEventListener('click', () => {
-            contactContainer.classList.toggle('expanded');
-            expandBtn.textContent = contactContainer.classList.contains('expanded') 
-                ? 'Nascondi il modulo di contatto' 
-                : 'Mostra il modulo di contatto';
+        hamburger.addEventListener("click", () => {
+            menuOverlay.classList.toggle("show");
         });
 
-        // Toggle the navigation menu on hamburger click
-        hamburger.addEventListener('click', () => {
-            menuOverlay.classList.toggle('show');
-        });
-
-        // Close the menu overlay when clicking outside of it
-        menuOverlay.addEventListener('click', () => {
-            menuOverlay.classList.remove('show');
+        const menuLinks = document.querySelectorAll("#nav-links-mobile a");
+        menuLinks.forEach(link => {
+            link.addEventListener("click", () => {
+                menuOverlay.classList.remove("show");
+            });
         });
     </script>
 </body>
