--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             display: inline-block;
             margin-left: 15px;
             vertical-align: middle;
+            font-size: 24px;
         }
         nav ul {
             list-style-type: none;
@@ -66,14 +67,15 @@
             color: white;
             text-decoration: none;
             font-weight: bold;
+            transition: color 0.3s ease;
         }
         nav ul li a:hover {
-            text-decoration: underline;
+            color: #ccc;
         }
         #hero {
-            background-color: #3399ff;
+            background: linear-gradient(135deg, #3399ff, #003f7d);
             color: white;
-            padding: 50px 0;
+            padding: 60px 0;
             text-align: center;
         }
         #about, #benefits, #donate, #contact {
@@ -81,15 +83,20 @@
         }
         .benefits-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
         }
         .benefit-item {
             background-color: #fff;
             border: 1px solid #ddd;
-            border-radius: 5px;
+            border-radius: 10px;
             padding: 20px;
             box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .benefit-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 2px 4px 15px rgba(0, 0, 0, 0.2);
         }
         .btn {
             background-color: #0056b3;
@@ -100,10 +107,11 @@
             text-decoration: none;
             display: inline-block;
             margin-top: 20px;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
         .btn:hover {
             background-color: #003f7d;
+            transform: scale(1.05);
         }
         footer {
             margin-top: 50px;
@@ -125,8 +133,8 @@
             display: none;
             flex-direction: column;
             justify-content: space-around;
-            width: 40px;
-            height: 30px;
+            width: 35px;
+            height: 28px;
             cursor: pointer;
             z-index: 10;
         }
@@ -134,7 +142,16 @@
             height: 4px;
             width: 100%;
             background-color: white;
-            transition: 0.3s;
+            transition: all 0.3s ease;
+        }
+        .hamburger.open .line:nth-child(1) {
+            transform: rotate(45deg) translate(6px, 6px);
+        }
+        .hamburger.open .line:nth-child(2) {
+            opacity: 0;
+        }
+        .hamburger.open .line:nth-child(3) {
+            transform: rotate(-45deg) translate(6px, -6px);
         }
 
         /* Mobile menu */
@@ -293,12 +310,14 @@
         const menuOverlay = document.getElementById("menu-overlay");
 
         hamburger.addEventListener("click", () => {
+            hamburger.classList.toggle("open");
             menuOverlay.classList.toggle("show");
         });
 
         const menuLinks = document.querySelectorAll("#nav-links-mobile a");
         menuLinks.forEach(link => {
             link.addEventListener("click", () => {
+                hamburger.classList.remove("open");
                 menuOverlay.classList.remove("show");
             });
         });
