--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo di ERGO4ONE - Piattaforma Decentralizzata" class="logo">
                 </a>
             </div>
-            <h1>MillionErg</h1>
+            <h1>Ergo4One</h1>
             <div class="hamburger" id="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
